--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,7 @@ div {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: fit-content
 }
 
 #product {
@@ -30,8 +31,23 @@ div {
   transform: translate(-50%, -50%);
 }
 
-#bg {
+#body {
   background: url('./components/img/wave.svg');
   background-repeat: no-repeat;
   background-position: bottom;
+  height: 100vh;
+  max-width: none; 
+  overflow: hidden;
+}
+
+.blue {
+  color: #546A76
+}
+
+#icon {
+  margin-left: 0.5em
+}
+
+#search {
+  width: 40%
 }
