--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,8 @@ div {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: fit-content
+  width: fit-content;
+  border-radius: 8%;
 }
 
 #product {
@@ -49,5 +50,5 @@ div {
 }
 
 #search {
-  width: 40%
+  width: 35%
 }
